Enhancement: Adding lead image

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,6 @@ block content
       li
         h4: a(href= post._url)= post.title
         p= post.date
-        img(src= asset(entry.image))
+        img(src= asset(entry.featuredImage))
 
 
