--- a/assets/css/_settings.styl
+++ b/assets/css/_settings.styl
@@ -1,15 +1,16 @@
 // Axis Settings (http://roots.cx/axis)
 
 // font stack (add your own!)
-helvetica-neue = "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif
+helvetica-neue = "Open sans", HelveticaNeue, Helvetica, Arial, sans-serif
 helvetica = "Helvetica Neue", Helvetica, Arial, sans-serif
 georgia = Georgia, Cambria, "Times New Roman", Times, serif
+open-sans = "Open sans"
 lucidia-grande = "Lucida Grande", Tahoma, Verdana, Arial, sans-serif
 monospace = unquote("'Bitstream Vera Sans Mono', Consolas, Courier, monospace")
 verdana = Verdana, Geneva, sans-serif
 
 // default font stack
-font-stack = helvetica-neue
+font-stack = open-sans
 font-size = 16
 font-color = #555
 
