--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -4,6 +4,7 @@ normalize-css()
 base()
 
 body
+  font-family: font-stack !important
   padding: 0px
   font-size: font-size
 
@@ -20,3 +21,9 @@ body
 
 .navbar
 	margin-bottom: 0px !important
+
+.thumbnails h4 a
+  color: blue !important
+
+.btn
+  background-color: blue !important
