Enhancement: Update Index File

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,4 +20,4 @@ block content
           div.caption
             h4: a(href= post._url)= post.title
             p= post.date
-            a(href= post._url).btn.btn-primary more
+            a(href= post._url).btn.btn-primary Read more
