--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -28,12 +28,10 @@ body
 .btn
   background-color: blue !important
 
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) and (orientation:portrait)
+@media screen and (orientation:portrait)
   body
-    -webkit-transform rotate(90deg)
-    width 100%
-    height 100%
-    background red !important
+    background red
 
-
+@media screen and (orientation:landscape)
+  body
+    background blue
