--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -30,8 +30,8 @@ body
 
 @media screen and (orientation:portrait)
   body
-    background red
+    background red !important
 
 @media screen and (orientation:landscape)
   body
-    background blue
+    background blue !important
