--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,9 @@ html
 
     include layout/footer
 
+    .portrait-error
+      Sorry site not avaiable in portrait mode!
+
   script(data-main="js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
 
   <!-- Latest compiled and minified JavaScript -->
