--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -28,10 +28,28 @@ body
 .btn
   background-color: blue !important
 
+.portrait-error
+  position fixed
+  top 0
+  left 0
+  text-align center
+  padding-top 55%
+  width 100%
+  height 100%
+  text-align center
+  background #fff
+  z-index 9999
+
+
+
 @media screen and (orientation:portrait)
   body
     background red !important
+  .portrait-error
+    display block
 
 @media screen and (orientation:landscape)
   body
     background blue !important
+  .portrait-error
+    display none
